@@ -4,8 +4,15 @@ PyObjC NEWS
 
 An overview of the relevant changes in new, and older, releases.
 
+
 Version 1.4.1 (2006-??-??)
 --------------------------
+
+- NibClassBuilder.AutoBaseClass raises an exception when the (optional) python 
+  definition for an outlet is incompatible with the definition in the NIB file.
+
+- objc.ivar is now introspectable (that is, you can query an ivar for its 
+  name and type)
 
 - PyObjC now uses setuptools. Setuptools support is fairly minimal at the 
   moment, we expect to move more of the build infrastructure to setuptools and
